# python-easyverein

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  KNOWN_ISSUES.md  README.md  Taskfile.yml  mkdocs.yml  pyproject.toml  test.py
.github/workflows/: pytest.yml  python-lint.yml  release.yml
dev/: generate_filter.py
docs/: api.md  changelog.md  index.md  usage.md
docs/api/: crud.md  recycle_bin.md
docs/api/endpoints/: billing_account.md  booking.md  booking_project.md  contact_details.md  custom_field.md  custom_field_select_option.md  invoice.md  invoice_item.md  member.md  member_custom_field.md  member_group.md  member_member_group.md
docs/models/: base.md  billing_account.md  booking.md  booking_project.md  contact_details.md  custom_field.md  custom_field_select_option.md  invoice.md  invoice_item.md  member.md  member_custom_field.md  member_group.md  member_member_group.md
easyverein/: __init__.py  api.py
easyverein/core/: client.py  exceptions.py  protocol.py  responses.py  types.py  validators.py
easyverein/models/: __init__.py  base.py  billing_account.py  booking.py  booking_project.py  contact_details.py  contact_details_group.py  custom_field.py  custom_field_select_option.py  invoice.py  invoice_item.py  lsb_dosb_sport.py  member.py  member_custom_field.py  member_group.py  member_member_group.py
easyverein/models/mixins/: empty_strings_mixin.py  required_attributes.py
easyverein/modules/: __init__.py  billing_account.py  booking.py  booking_project.py  contact_details.py  contact_details_group.py  custom_field.py  custom_field_select_option.py  invoice.py  invoice_item.py  member.py  member_custom_field.py  member_group.py  member_member_group.py
easyverein/modules/mixins/: crud.py  helper.py  recycle_bin.py
tests/: conftest.py  test_billing_account.py  test_booking.py  test_booking_project.py  test_contact_details.py  test_contact_details_group.py  test_custom_field.py  test_custom_field_select_option.py  test_filters.py  test_invoice.py  test_member.py  test_member_custom_field.py  test_member_group.py  test_member_member_group.py
tests/unit/: conftest.py  test_models.py
