[tool.poetry]
name = "python-easyverein"
version = "0.2.3"
description = "Python library to interact with the EasyVerein API"
authors = ["Daniel Herrmann <daniel.herrmann1@gmail.com>"]
readme = "README.md"
packages = [{ include = "easyverein" }]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2"
requests = "^2"
email-validator = "^2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
ruff = "^0.0.259"
pytest = "^7.4.3"
pytest-dotenv = "^0.5.2"
mkdocs-material = "^9.4.14"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
pymdown-extensions = "^10.7"
pre-commit = "^3.6.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88

[tool.ruff.per-file-ignores]
# Ignore `E402` and `F401` (import violations) in all `__init__.py` files
"__init__.py" = ["E402", "F401"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
